Implement functional tests for the new dump params

--- a/app/src/main/jni/tests/CMakeLists.txt
+++ b/app/src/main/jni/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ macro(build_tests)
   target_link_libraries(${ARGV0} capture)
 endmacro()
 
+# Tests
 build_tests(pcap_reader)
 
 add_test(NAME dpi_extract COMMAND ./dpi extract)
@@ -35,3 +36,8 @@ build_tests(dpi)
 add_test(NAME blacklist_match COMMAND ./blacklist match)
 add_test(NAME blacklist_detection COMMAND ./blacklist detection)
 build_tests(blacklist)
+
+add_test(NAME dump_api_snaplen COMMAND ./dump_api snaplen)
+add_test(NAME dump_api_max_pkts_flow COMMAND ./dump_api max_pkts_per_flow)
+add_test(NAME dump_api_max_size COMMAND ./dump_api max_dump_size)
+build_tests(dump_api)
