--- a/app/src/main/jni/tests/CMakeLists.txt
+++ b/app/src/main/jni/tests/CMakeLists.txt
@@ -1,21 +1,14 @@
-option(FUZZING "Build for Fuzz Testing" OFF)
-
-# Build with address/leak sanitizer
-set(CMAKE_C_COMPILER "clang")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-omit-frame-pointer")
-
 project(tests)
 cmake_minimum_required(VERSION 3.18.1)
 
+option(FUZZING "Build for Fuzz Testing" OFF)
+
 if(FUZZING)
   if(NOT DEFINED "LIB_FUZZING_ENGINE")
-    set(LIB_FUZZING_ENGINE "-fsanitize=fuzzer,address -fno-sanitize-recover=undefined")
+    set(LIB_FUZZING_ENGINE "-fsanitize=fuzzer-no-link,address -fno-sanitize-recover=undefined")
   endif()
 
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFUZZING -g ${LIB_FUZZING_ENGINE}")
-else()
-  # Tests
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFUZZING -g -O1 ${LIB_FUZZING_ENGINE}")
 endif()
 
 #set(CMAKE_VERBOSE_MAKEFILE ON)
@@ -25,6 +18,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_BINARY_DIR}/main
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
 include_directories(${ROOTDIR}/submodules/zdtun)
 include_directories(${ROOTDIR}/submodules/nDPI/src/include)
+include_directories(.)
 
 if(FUZZING)
   add_subdirectory(fuzz)
