--- a/app/src/main/jni/tests/Makefile
+++ b/app/src/main/jni/tests/Makefile
@@ -1,4 +1,4 @@
-.PHONY: clean run_tests fuzz fuzz_pcapd
+.PHONY: clean run_tests fuzz fuzz_pcapd fuzz_capture
 
 clean:
 	rm -rf build /tmp/pcapdroid_test*
@@ -6,7 +6,7 @@ clean:
 run_tests:
 	mkdir -p build/test
 	cd build/test && \
-		cmake -DCMAKE_C_COMPILER=clang -DCMAKE_C_FLAGS="-fsanitize=address -fno-omit-frame-pointer -O1" ../.. && \
+		cmake -DCMAKE_C_COMPILER=clang -DCMAKE_C_FLAGS="-fsanitize=address,leak -fno-omit-frame-pointer -O1" ../.. && \
 		$(MAKE) run_tests
 
 fuzz:
@@ -14,10 +14,10 @@ fuzz:
 	mkdir -p build/${FUZZ_TARGET}
 	cd build/${FUZZ_TARGET} && \
 		cmake -DFUZZING=1 -DCMAKE_C_COMPILER=clang ../.. && \
-		make -j$(nproc) ${FUZZ_TARGET}
+		$(MAKE) ${FUZZ_TARGET}
 	cd build/${FUZZ_TARGET}/fuzz && \
 		mkdir -p CORPUS && \
-		./${FUZZ_TARGET} CORPUS ../../../../../../../../submodules/nDPI/tests/pcap ../../../pcap >/dev/null
+		./${FUZZ_TARGET} CORPUS ../../../../../../../../submodules/nDPI/tests/pcap ../../../pcap ${FUZZ_OPTS}
 
 fuzz_pcapd:
 	$(MAKE) FUZZ_TARGET=fuzz_pcapd fuzz
