Show HTTPS, IMAPS and SMTPS instead of TLS
Such names are more user-friendly. Combine ALPN-based detection with
guesses

--- a/app/src/main/jni/core/CMakeLists.txt
+++ b/app/src/main/jni/core/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(capture SHARED
         capture_vpn.c
         capture_root.c
         ip_lru.c
-        ndpi_master_protos.c
+        ndpi_config.c
         crc32.c
         blacklist.c
         pcap_utils.c
