Add app on-boarding
Closes #149

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,5 @@ dependencies {
 // Third-party
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
     implementation 'com.github.KaKaVip:Android-Flag-Kit:v0.1'
+    implementation 'com.github.AppIntro:AppIntro:6.2.0'
 }
