Unblock newly installed apps via notification button
Closes #236

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,6 +119,8 @@
             </intent-filter>
         </service>
 
+        <receiver android:name="com.emanuelef.remote_capture.ActionReceiver" />
+
         <receiver
             android:name=".BootReceiver"
             android:exported="false">
