--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -5,8 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    branches-ignore:
-    - playstore
+    if: github.ref != 'refs/heads/playstore'
     steps:
     - uses: actions/checkout@v2
       with:
