--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -13,5 +13,5 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: '11'
-    #- run: ./gradlew test
+    - run: ./gradlew test
     - run: ./gradlew assembleDebug -PdoNotStrip
