--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 33
-    buildToolsVersion "31.0.0"
-    ndkVersion "25.0.8775105"
+    buildToolsVersion "33.0.0"
+    ndkVersion "25.1.8937393"
 
     defaultConfig {
         applicationId "com.emanuelef.remote_capture"
@@ -59,27 +59,28 @@ android {
         // needed by robolectric
         unitTests.includeAndroidResources = true
     }
+    namespace 'com.emanuelef.remote_capture'
 }
 
 dependencies {
 // Tests
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'androidx.test:core:1.4.0'
-    testImplementation "org.robolectric:robolectric:4.8"
+    testImplementation 'androidx.test:core:1.5.0'
+    testImplementation "org.robolectric:robolectric:4.9"
     testImplementation 'org.mockito:mockito-core:1.10.19'
 
 // AndroidX
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.fragment:fragment:1.5.2'
+    implementation 'androidx.fragment:fragment:1.5.4'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation "androidx.navigation:navigation-fragment:2.5.2"
-    implementation "androidx.navigation:navigation-ui:2.5.2"
+    implementation "androidx.navigation:navigation-fragment:2.5.3"
+    implementation "androidx.navigation:navigation-ui:2.5.3"
 
 // Google
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'org.brotli:dec:0.1.2'
 
