Write app log to file
See #282

--- a/app/src/main/jni/core/CMakeLists.txt
+++ b/app/src/main/jni/core/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(capture SHARED
         crc32.c
         blacklist.c
         pcap_utils.c
+        log_writer.c
         jni_impl.c)
 
 # nDPI
