Add ability to configure port mapping
In VPN mode, it's now possible to redirect the traffic of specific
ports towards another host and port. This makes it possible to
integrate PCAPdroid with other apps, by forwarding the traffic to
a local server.

Closes #274

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,10 @@
             android:launchMode="singleTop"
             android:parentActivityName=".activities.SettingsActivity" />
         <activity
+            android:name=".activities.PortMapActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".activities.SettingsActivity" />
+        <activity
             android:name=".activities.AboutActivity"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity" />
