--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,6 @@ android.enableJetifier=true
 
 # Gradle plugin not support API 33 yet
 android.suppressUnsupportedCompileSdk=33
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
