Rename root-related code
This is a preparation to the integration of reading from a PCAP file

--- a/app/src/main/jni/core/CMakeLists.txt
+++ b/app/src/main/jni/core/CMakeLists.txt
@@ -3,7 +3,7 @@ project(core)
 add_library(capture SHARED
         pcapdroid.c
         capture_vpn.c
-        capture_root.c
+        capture_libpcap.c
         ip_lru.c
         ndpi_config.c
         crc32.c
