--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "33.0.0"
     ndkVersion "25.1.8937393"
 
     defaultConfig {
         applicationId "com.emanuelef.remote_capture"
+        compileSdk 33
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 72
