Upgrade to SDK 34 - Android 14
Define a foregroundServiceType to meet the new Android policy:
https://developer.android.com/about/versions/14/behavior-changes-14#fgs-types

Closes #368

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ android {
 
     defaultConfig {
         applicationId "com.emanuelef.remote_capture"
-        compileSdk 33
         minSdkVersion 21
-        targetSdkVersion 33
+        compileSdk 34
+        targetSdk 34
         versionCode 72
         versionName "1.6.9"
 
