--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,6 +110,10 @@
         <activity
             android:name=".activities.MitmSetupWizard"
             android:launchMode="singleTop" />
+        <activity
+            android:name=".activities.AppFilterActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".activities.MainActivity" />
 
         <service
             android:name=".CaptureService"
