--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,13 @@
 
 version: 2
 updates:
+  - package-ecosystem: gradle
+    directory: "/"
+    schedule:
+      interval: daily
+    target-branch: "master"
+    open-pull-requests-limit: 0
+    
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
