--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -7,10 +7,13 @@ jobs:
     runs-on: windows-latest
     if: github.ref != 'refs/heads/playstore'
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
-    - uses: actions/setup-java@v1
+        
+    - uses: actions/setup-java@v4
       with:
         java-version: '17'
+        distribution: 'temurin'
+        
     - run: ./gradlew.bat assembleDebug
