Initial HTTP log implementation
The log shows individual HTTP requests, allowing to inspect the
requests and replies body. Currently this relies on the full
payload option to be enabled. The searchbox is not implemented

See #416

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,10 @@
         <activity
             android:name=".activities.ConnectionsActivity" />
         <activity
+            android:name=".activities.HttpLogActivity" />
+        <activity
+            android:name=".activities.HttpDetailsActivity" />
+        <activity
             android:name=".activities.AppsActivity"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity" />
