--- a/app/src/main/jni/core/CMakeLists.txt
+++ b/app/src/main/jni/core/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(capture SHARED
         pcap_reader.c
         log_writer.c
         port_map.c
+        ushark_dll.c
         jni_impl.c)
 
 # nDPI
@@ -41,7 +42,6 @@ configure_file(${NDPI_GEN}/ndpi_config.h ${NDPI_ROOT}/src/include/ndpi_config.h)
 configure_file(${NDPI_GEN}/ndpi_define.h ${NDPI_ROOT}/src/include/ndpi_define.h)
 
 ADD_LIBRARY(ndpi SHARED ${ndpiSources} ${NDPI_ROOT}/src/include/ndpi_api.h)
-
 
 if(ANDROID)
         find_library(log-lib log)
