--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
         android:theme="@style/AppTheme"
         android:allowBackup="true"
         tools:replace="android:label"
-        android:localeConfig="@xml/locales_config"
-        tools:targetApi="tiramisu">
+        tools:targetApi="m">
 
         <activity
             android:name=".activities.MainActivity"
@@ -111,10 +110,6 @@
         <activity
             android:name=".activities.MitmSetupWizard"
             android:launchMode="singleTop" />
-        <activity
-            android:name=".activities.AppFilterActivity"
-            android:launchMode="singleTop"
-            android:parentActivityName=".activities.MainActivity" />
 
         <service
             android:name=".CaptureService"
@@ -128,14 +123,6 @@
             <intent-filter>
                 <action android:name="android.net.VpnService" />
             </intent-filter>
-        </service>
-        <service
-            android:name=".VpnReconnectService"
-            android:foregroundServiceType="specialUse"
-            android:exported="false">
-
-            <property android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
-                android:value="waits for the termination of the active VpnService"/>
         </service>
 
         <receiver android:name="com.emanuelef.remote_capture.ActionReceiver" />
