Revert with merge

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         android:theme="@style/AppTheme"
         android:allowBackup="true"
         tools:replace="android:label"
-        tools:targetApi="m">
+        android:localeConfig="@xml/locales_config"
+        tools:targetApi="tiramisu">
 
         <activity
             android:name=".activities.MainActivity"
@@ -110,6 +111,10 @@
         <activity
             android:name=".activities.MitmSetupWizard"
             android:launchMode="singleTop" />
+        <activity
+            android:name=".activities.AppFilterActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".activities.MainActivity" />
 
         <service
             android:name=".CaptureService"
@@ -123,6 +128,14 @@
             <intent-filter>
                 <action android:name="android.net.VpnService" />
             </intent-filter>
+        </service>
+        <service
+            android:name=".VpnReconnectService"
+            android:foregroundServiceType="specialUse"
+            android:exported="false">
+
+            <property android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="waits for the termination of the active VpnService"/>
         </service>
 
         <receiver android:name="com.emanuelef.remote_capture.ActionReceiver" />
