--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -7,17 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/playstore'
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
-    - uses: actions/setup-java@v1
+        
+    - uses: actions/setup-java@v4
       with:
         java-version: '17'
+        distribution: 'temurin'
+        
     - run: ./gradlew test
     - run: ./gradlew assembleDebug -PdoNotStrip
-
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: app-debug
-        path: app/build/outputs/apk/*/**.apk
