Update to Java 17 and enable desugaring
This fixes Java 8 deprecation warnings in newer gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,6 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-# Gradle plugin not support API 33 yet
-android.suppressUnsupportedCompileSdk=33
-android.defaults.buildfeatures.buildconfig=true
+android.javaCompile.suppressSourceTargetDeprecationWarning=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
