--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ android {
         }
     }
 
+    buildFeatures {
+        buildConfig = true
+    }
+
     packagingOptions {
         jniLibs {
             // NOTE: needed to unpack libpcapd.so when installed as app bundle
@@ -57,8 +61,9 @@ android {
 
     compileOptions {
         encoding "UTF-8"
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true // support devices running older Java versions
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     sourceSets {
@@ -87,6 +92,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation "androidx.navigation:navigation-fragment:2.8.2"
     implementation "androidx.navigation:navigation-ui:2.8.2"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
 
 // Google
     implementation 'com.google.android.material:material:1.12.0'
